--- a/schedule-tracker/public/index.html
+++ b/schedule-tracker/public/index.html
@@ -4,27 +4,29 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0a0a0a" />
     <meta
       name="description"
-      content="Smart schedule tracker for engineering students"
+      content="A smart schedule and habit tracker designed for engineering students to balance coding practice, projects, exams, and life."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mydailyflow.app/" />
+    <meta property="og:title" content="MyDailyFlow | Plan Your Day. Build Your Future." />
+    <meta property="og:description" content="The definitive productivity interface for developers. Gamified, distraction-free, and compiled for peak performance." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.svg" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>MyDailyFlow</title>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mydailyflow.app/" />
+    <meta property="twitter:title" content="MyDailyFlow | Plan Your Day. Build Your Future." />
+    <meta property="twitter:description" content="The definitive productivity interface for developers. Gamified, distraction-free, and compiled for peak performance." />
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo.svg" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>MyDailyFlow | Plan Your Day. Build Your Future.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
